fixed extra space to the right when editor is open

--- a/src/components/todo_list/todo_list.module.css
+++ b/src/components/todo_list/todo_list.module.css
@@ -35,12 +35,19 @@
     row-gap: 1vh;
 
     overflow-y: scroll;
-    -ms-overflow-style: none;  /* Hide scroll bar on IE and Edge */
-    scrollbar-width: none;     /* Hide scroll bar on Firefox */
 }
 
 .listTodoLists::-webkit-scrollbar {
-  display: none;             /* Hide scroll bar on Chrome, Safari, Opera */
+    width: 12px;
+}
+
+.listTodoLists::-webkit-scrollbar-track {
+    background-color: inherit;
+}
+
+.listTodoLists::-webkit-scrollbar-thumb {
+    background-color: #80aafe;
+    border-radius: 10px;
 }
 
 .listTodoLists > button {
@@ -76,7 +83,6 @@
     border: none;
     background-color: #b4c2de;
     font-size: 2vw;
-    /* border: 2px solid red; */
 
     border-bottom-left-radius: 22px;
     border-bottom-right-radius: 22px;
@@ -117,17 +123,14 @@
     height: 100%;
     justify-self: start;
     align-self: center;
-    /* border: 2px solid blue; */
 
 }
 
 .todoListNameDisplay > input {
-    /* font-size: 3.8vw; */
     font-size: 350%;
     font-weight: bold;
     background-color: inherit;
     border: none;
-    /* border: 2px solid red; */
     width: auto;
 }
 
@@ -170,13 +173,20 @@
     flex-flow: column nowrap;
     row-gap: 5px;
 
-    overflow-y: scroll;
-    -ms-overflow-style: none;  /* Hide scroll bar on IE and Edge */
-    scrollbar-width: none;     /* Hide scroll bar on Firefox */
+    overflow-y: auto;
 }
 
 .todoListDisplay::-webkit-scrollbar {
-  display: none;             /* Hide scroll bar on Chrome, Safari, Opera */
+    width: 12px;
+}
+
+.todoListDisplay::-webkit-scrollbar-track {
+    background-color: inherit;
+}
+
+.todoListDisplay::-webkit-scrollbar-thumb {
+    background-color: #ffc933;
+    border-radius: 10px;
 }
 
 .todoCard {
@@ -298,7 +308,7 @@
 .editTodoArea {
     grid-area: 1 / 3 / 4 / 4;
     margin: -2vh 0vw;
-    margin-right: -2vw;
+    margin-left: 2vw;
     border-radius: 18px;
 
     display: grid;
@@ -353,7 +363,6 @@
     grid-area: 1 / 2 / 2 / 3;
     font-size: 160%;
     font-weight: bold;
-    background-color: #f7c849;
 
     background-color: inherit;
     border: 2px solid #ffbb00;
@@ -371,8 +380,24 @@
     font-size: 160%;
     font-weight: bold;
     background-color: inherit;
-    border: 2px solid #ffbb00;
 
     resize: none;
     border-radius: 15px;
+    border: none;
+
+    overflow-y: auto;
+}
+
+.editTodoNote::-webkit-scrollbar {
+    width: 12px;
+    padding: 1px;
+}
+
+.editTodoNote::-webkit-scrollbar-track {
+    background-color: inherit;
+}
+
+.editTodoNote::-webkit-scrollbar-thumb {
+    background-color: #ffffff;
+    border-radius: 10px;
 }
